--- a/Exercise3.Rmd
+++ b/Exercise3.Rmd
@@ -77,10 +77,10 @@ url_math
 math <- read.table(url_math, sep = ";" , header = TRUE)
 
 # web address for Portuguese class data
-url_por <- paste("replace me!", "student-por.csv", sep = " change me! ")
+url_por <- paste(url, "student-por.csv", sep = "/")
 
 # print out the address
-
+url_por
 
 # read the Portuguese class questionnaire data into memory
 por <- read.table(url_por, sep = ";", header = TRUE)
@@ -133,20 +133,21 @@ Hints:
 library(dplyr)
 
 # give the columns that vary in the two data sets
-free_cols
+free_cols <- c("failures", "paid", "absences", "G1", "G2", "G3")
 
 # the rest of the columns are common identifiers used for joining the data sets
-join_cols <- setdiff(colnames(por), "change me!")
+join_cols <- setdiff(colnames(por), free_cols)
 
 # join the two data sets by the selected identifiers
-math_por <- inner_join(math, por, by = "change me!")
+math_por <- inner_join(math, por, by = join_cols, suffix = c(".math", ".por"))
 
 # look at the column names of the joined data set
 
+colnames(math_por)
 
 # glimpse at the joined data set
 
-
+glimpse(math_por)
 
 ```
 
@@ -201,13 +202,13 @@ Hint:
 # dplyr, math_por, join_by are available
 
 # print out the column names of 'math_por'
-
+colnames(math_por)
 
 # create a new data frame with only the joined columns
-alc <- select(math_por, all_of("change me!"))
+alc <- select(math_por, all_of(join_cols))
 
 # print out the columns not used for joining (those that varied in the two data sets)
-
+free_cols
 
 # for every column name not used for joining...
 for(col_name in free_cols) {
@@ -229,7 +230,7 @@ for(col_name in free_cols) {
 }
 
 # glimpse at the new combined data
-
+alc 
 
 
 ```
@@ -297,14 +298,14 @@ g1 <- ggplot(data = alc, aes(x = alc_use))
 g1 + geom_bar()
 
 # define a new logical column 'high_use'
-alc <- mutate(alc, high_use = "change me!" > 2)
+alc <- mutate(alc, high_use = alc_use > 2)
 
 # initialize a plot of 'high_use'
-g2 <- ggplot(data = alc)
+g2 <- ggplot(data = alc, aes(x = high_use))
 
 # draw a bar plot of high_use by sex
 
-
+g2 + geom_bar()
 ```
 
 
@@ -346,7 +347,7 @@ Hint:
 library(tidyr); library(dplyr); library(ggplot2)
 
 # glimpse at the alc data
-
+glimpse(alc)
 
 # use gather() to gather columns into key-value pairs and then glimpse() at the resulting data
 gather(alc) %>% glimpse
@@ -355,7 +356,8 @@ gather(alc) %>% glimpse
 gather(alc) %>% View
 
 # draw a bar plot of each variable
-gather(alc) %>% ggplot(aes(value)) + facet_wrap("key", scales = "free")
+gather(alc) %>% ggplot(aes(value)) + facet_wrap("key", scales = "free") + 
+  geom_bar()
 
 
 ```
@@ -409,6 +411,9 @@ library(dplyr); library(ggplot2)
 # produce summary statistics by group
 alc %>% group_by(sex) %>% summarise(count = n())
 
+alc %>% group_by(sex) %>% summarise(count = n(), mean_grade=mean(G3))
+
+alc %>% group_by(sex, high_use) %>% summarise(count = n(), mean_grade=mean(G3))
 
 ```
 
@@ -449,16 +454,18 @@ Hints:
 library(ggplot2)
 
 # initialize a plot of high_use and G3
-g1 <- ggplot(alc, aes(x = high_use, y = G3))
+g1 <- ggplot(alc, aes(x = high_use, y = G3, col=sex))
 
 # define the plot as a boxplot and draw it
 g1 + geom_boxplot() + ylab("grade")
 
 # initialize a plot of high_use and absences
+g2 <- ggplot(alc, aes(x = high_use, y = absences, col=sex)) 
 
 
 # define the plot as a box plot and draw it
-
+g2 + geom_boxplot() + ylab("absences") +
+  ggtitle("Student absences by alcohol consumption and sex")
 
 ```
 
@@ -499,10 +506,15 @@ m <- glm(high_use ~ failures + absences, data = alc, family = "binomial")
 
 # print out a summary of the model
 
+summary(m)
 
 # print out the coefficients of the model
 
+coef(m)
 
+m1 <- glm(high_use ~ failures + absences + sex, data = alc, family = "binomial")
+coef(m1)
+summary(m1)
 ```
 
 
@@ -550,6 +562,7 @@ OR <- coef(m) %>% exp
 
 # compute confidence intervals (CI)
 
+CI <- confint(m)
 
 # print out the odds ratios with their confidence intervals
 cbind(OR, CI)
@@ -605,13 +618,13 @@ library(dplyr)
 alc <- mutate(alc, probability = probabilities)
 
 # use the probabilities to make a prediction of high_use
-alc <- mutate(alc, prediction = "change me!")
+alc <- mutate(alc, prediction = probability>0.5)
 
 # see the last ten original classes, predicted probabilities, and class predictions
 select(alc, failures, absences, sex, high_use, probability, prediction) %>% tail(10)
 
 # tabulate the target variable versus the predictions
-table(high_use = alc$high_use, prediction = "change me!")
+table(high_use = alc$high_use, prediction = alc$prediction)
 
 
 ```
@@ -655,14 +668,14 @@ Hint:
 library(dplyr); library(ggplot2)
 
 # initialize a plot of 'high_use' versus 'probability' in 'alc'
-g <- ggplot(alc, aes(x = "change me!", y = "change me!"))
+g <- ggplot(alc, aes(x = probability, y = high_use, col = prediction))
 
 # define the geom as points and draw the plot
-
+g + geom_point()
 
 # tabulate the target variable versus the predictions
-table(high_use = alc$high_use, prediction = alc$prediction)
-
+table <- table(high_use = alc$high_use, prediction = alc$prediction)
+table %>% prop.table() %>% addmargins()
 
 ```
 
@@ -712,7 +725,13 @@ loss_func <- function(class, prob) {
 
 # call loss_func to compute the average number of wrong predictions in the (training) data
 loss_func(class = alc$high_use, prob = 0)
+# Jos malli ennustaisi kaikille false, 30 % ennustuksista menisi väärin (30 % aineistosta on suurkuluttajia)
+loss_func(class = alc$high_use, prob = 1)
+# 70 % ennustuksista menisi väärin
 
+loss_func(class = alc$high_use, prob = alc$probability)
+
+# 23 % kaikista mallin ennustuksista menee väärin
 
 ```
 
@@ -758,6 +777,7 @@ loss_func <- function(class, prob) {
 
 # compute the average number of wrong predictions in the (training) data
 
+loss_func(class = alc$high_use, prob = alc$probability)
 
 # K-fold cross-validation
 library(boot)
@@ -766,6 +786,10 @@ cv <- cv.glm(data = alc, cost = loss_func, glmfit = m, K = nrow(alc))
 # average number of wrong predictions in the cross validation
 cv$delta[1]
 
+# 10-fold predictions
+cv1 <- cv.glm(data = alc, cost = loss_func, glmfit = m, K = 10)
+
+cv1$delta[1]
 ```
 
 **GOOD JOB!**
